--- a/notebooks/starter-notebook.ipynb
+++ b/notebooks/starter-notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ddcba398-211f-49a7-a33c-9b4f71acc161",
    "metadata": {
     "scrolled": true
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b5f7c142-768a-4802-a134-1ad0c28dce40",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "e217082d-c053-4c72-a1ea-7898166f748d",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "1e5e0bf6-530d-448f-b33f-b16b8fa016f1",
    "metadata": {},
    "outputs": [
@@ -169,19 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "caecc712-c5ae-4c49-bd16-0c9cd6721c5f",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -542,8 +535,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0d645a3f-0eea-47c0-a999-cda1e37b3c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spark.sql.catalog.local: org.apache.iceberg.spark.SparkCatalog\n",
+      "spark.sql.catalog.local.warehouse: file:///home/airflow/warehouse\n",
+      "spark.sql.defaultCatalog: local\n",
+      "spark.sql.catalog.local.type: hadoop\n",
+      "spark.sql.catalogImplementation: in-memory\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In Jupyter\n",
+    "for conf in spark.sparkContext.getConf().getAll():\n",
+    "    if 'iceberg' in conf[0].lower() or 'catalog' in conf[0].lower():\n",
+    "        print(f\"{conf[0]}: {conf[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "16ce3c29-15a3-4ff2-93ae-4a92365f413c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.1.1'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95dc4e9f-2b87-4cf1-9580-af1f5d7cccd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dcf0fdb-352e-4643-9ba3-f7e59075f79e",
    "metadata": {},
    "outputs": [],
    "source": []
